# Helpistos

./: .gitignore  AI-Instructions.md  CHANGELOG.md  README.md  audio_check.py  benchmark_session.py  benchmark_speak.py  build_apk.sh  pyproject.toml  requirements.txt  test_optimization.py  test_timeouts.py  test_voice_assistant.py  voice_assistant.py
.briefcase-venv/: pyvenv.cfg
src/helpistos/: __main__.py  app.py
tests/: test_app.py  test_assistant.py  test_audio.py  test_voice_assistant.py
