[project]
name = "helpistos"
version = "1.0.29"
description = "Greek Voice Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "toga",
    "gtts",
    "speechrecognition",
    "requests",
    "beautifulsoup4",
]

[project.scripts]
helpistos = "helpistos.__main__:main"

[tool.briefcase]
project_name = "Helpistos"
bundle = "com.example"
version = "1.0.29"
display_name = "Helpistos v1.0.29"
author = "User"
author_email = "user@example.com"

[tool.briefcase.app.helpistos]
executable_name = "helpistos"
sources = ["src/helpistos"]
permission = { microphone = "Το Helpistos χρειάζεται το μικρόφωνο για λειτουργίες Voice Assistant.", network = "Basic network access." }

[tool.briefcase.app.helpistos.linux]
requires = []

[tool.briefcase.app.helpistos.windows]
requires = []

[tool.briefcase.app.helpistos.android]
requires = [
    "toga-android",
    "rubicon-java",
    "gtts",
    "speechrecognition",
    "requests",
    "beautifulsoup4",
]

